--- a/CapaUsuario/CapaUsuario.csproj
+++ b/CapaUsuario/CapaUsuario.csproj
@@ -77,11 +77,11 @@
     <Compile Include="PagosInformacion.Designer.cs">
       <DependentUpon>PagosInformacion.cs</DependentUpon>
     </Compile>
-    <Compile Include="PagoActividadDeportiva.cs">
+    <Compile Include="PagoActividadDeportivaForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="PagoActividadDeportiva.Designer.cs">
-      <DependentUpon>PagoActividadDeportiva.cs</DependentUpon>
+    <Compile Include="PagoActividadDeportivaForm.Designer.cs">
+      <DependentUpon>PagoActividadDeportivaForm.cs</DependentUpon>
     </Compile>
     <Compile Include="PagoCuotaSocial.cs">
       <SubType>Form</SubType>
@@ -131,8 +131,8 @@
     <EmbeddedResource Include="NavBar.resx">
       <DependentUpon>NavBar.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="PagoActividadDeportiva.resx">
-      <DependentUpon>PagoActividadDeportiva.cs</DependentUpon>
+    <EmbeddedResource Include="PagoActividadDeportivaForm.resx">
+      <DependentUpon>PagoActividadDeportivaForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PagoCuotaSocial.resx">
       <DependentUpon>PagoCuotaSocial.cs</DependentUpon>
