--- a/CapaUsuario/CapaUsuario.csproj
+++ b/CapaUsuario/CapaUsuario.csproj
@@ -65,11 +65,11 @@
     <Compile Include="DarBajaSocio.Designer.cs">
       <DependentUpon>DarBajaSocio.cs</DependentUpon>
     </Compile>
-    <Compile Include="Administradora.cs">
+    <Compile Include="AdministradoraForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Administradora.Designer.cs">
-      <DependentUpon>Administradora.cs</DependentUpon>
+    <Compile Include="AdministradoraForm.Designer.cs">
+      <DependentUpon>AdministradoraForm.cs</DependentUpon>
     </Compile>
     <Compile Include="InformacionActividadDeportiva.cs">
       <SubType>Form</SubType>
